# billiards-3d

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
assets/dev/: room.blend  table.blend  table.blend1
assets/dev/8bp-pack/: CueBall.fbx  CueRack.fbx  DartBoard.fbx  Dart_01.fbx  Dart_02.fbx  DoorFrame.fbx  Door_01.fbx  Floor.fbx  FluorescentLight_03.fbx  PoolBall_00.fbx  PoolBall_01.fbx  PoolBall_02.fbx  PoolBall_03.fbx  PoolBall_04.fbx  PoolBall_05.fbx  PoolBall_06.fbx  PoolBall_07.fbx  PoolBall_08.fbx  PoolBall_09.fbx  PoolBall_10.fbx  PoolBall_11.fbx  PoolBall_12.fbx  PoolBall_13.fbx  PoolBall_14.fbx  PoolBall_15.fbx  PoolChalk.fbx  PoolCue.fbx  PoolPainting_01.fbx  PoolPainting_02.fbx  PoolPainting_03.fbx  PoolRack.fbx  PoolTable.fbx  Wall.fbx
assets/resources/data/: game_config.json
assets/resources/data/entities/: pool_ball_0.json  pool_ball_1.json  pool_ball_10.json  pool_ball_11.json  pool_ball_12.json  pool_ball_13.json  pool_ball_14.json  pool_ball_15.json  pool_ball_2.json  pool_ball_3.json  pool_ball_4.json  pool_ball_5.json  pool_ball_6.json  pool_ball_7.json  pool_ball_8.json  pool_ball_9.json  pool_ball_cue.json  pool_table.json
assets/resources/gfx/models/: pool_ball_5.mtl  pool_table.glb  pool_table.mtl
include/game/: config.hpp  game.hpp  resources.hpp  trace.hpp
include/game/entities/: entity.hpp  entity_data.hpp
include/game/states/: game_state.hpp  main_menu_state.hpp  play_state.hpp
src/: main.cpp
src/game/: config.cpp  game.cpp  resources.cpp  trace.cpp
src/game/entities/: entity.cpp  entity_data.cpp
src/game/states/: game_state.cpp  main_menu_state.cpp  play_state.cpp
